# condo-vs-house-cost-sim

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/cost-analysis-intake/: SKILL.md
context/: ARCHITECTURE.md  CONFIG_SCHEMAS.md  REFACTOR_PLAN.md
docs/archive/notebooks/: DEPRECATED.md
docs/plans/: 2026-06-07-mcp-server.md  2026-06-08-rent-income-model.md
docs/reference/: API_CONTRACT.md  CONFIG_SCHEMAS.md  DEV_NOTES.md
docs/roadmaps/: 2026-06-07_housing-decision-engine.md
docs/specs/: 2026-06-07-mcp-server-design.md  2026-06-08-rent-income-model-design.md
examples/: advanced_config.yaml  basic_config.yaml  income_shock.yaml  rent_vs_condo_vs_house.yaml
mcp_server/: main.py  registry.py  tools.py
notebooks/: advanced_usage.ipynb  basic_usage.ipynb
src/cvh_cost/: __init__.py  cli.py  config.py  deterministic.py  models.py  monte_carlo.py  pv.py  reporting.py
src/cvh_cost/agent/: __init__.py  analysis.py  assemble.py  intake.py  market.py  session.py
src/cvh_cost/agent/fixtures/: inflation.json  regional_benchmarks.json  treasury_curve.json
src/cvh_cost/config/: __init__.py  yaml_config.py
src/cvh_cost/core/: __init__.py  reporting.py
src/hde/: __init__.py  cli.py  config.py  deterministic.py  models.py  monte_carlo.py  reporting.py
tests/: __init__.py  test_agent_intake_assemble.py  test_agent_market.py  test_agent_session_analysis.py  test_config.py  test_deterministic.py  test_mcp_smoke.py  test_models_new.py  test_monte_carlo.py  test_pv.py  test_registry.py  test_tools.py
