[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "housing-decision-engine"
version = "0.2.0"
description = "Housing decision engine: rent / condo / house PV comparison with income and market scenario analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Contributors"}
]
keywords = ["finance", "real-estate", "housing", "cost-analysis", "monte-carlo", "present-value", "mcp"]

dependencies = [
    "numpy>=1.20.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
hde = "hde.cli:main"

[project.urls]
Repository = "https://github.com/mm-mike/housing-decision-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/hde"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
